--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,12 @@
 language: clojure
 
+lein: lein2
+
+script: lein2 do clean, ancient, test
+
+jdk:
+ - openjdk8
+ - oraclejdk8
+
 after_success:
         "lein deploy"
