Perform style checks automatically

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: clojure
 
 lein: lein2
 
-script: lein2 do clean, ancient, test
+script: lein2 do clean, ancient, kibit, eastwood, test
 
 after_success:
         "lein deploy"
