cloverage runs tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ cache:
 script: 
  - lein do clean, check, kibit, eastwood
  - lein ancient
- - lein do cloverage, test
+ - lein do cloverage
 
 after_success:
-        "lein deploy"
+  "lein deploy"
