kibit and eastwood both fail on alias-ns'd kwds

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache:
     - $HOME/.m2
 
 script: 
- - lein do clean, check, kibit, eastwood
+ - lein do clean, check
  - lein ancient
  - lein do cloverage
 
