only deploy on master branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,8 @@ script:
  - lein ancient
  - lein do cloverage
 
-after_success:
-  "lein deploy"
+deploy:
+  provider: script
+  script: scripts/deploy.sh
+  on:
+    branch: master
