--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,20 @@ language: clojure
 cache:
   directories:
     - $HOME/.m2
+    
+addons:
+  code_climate:
+    repo_token: 807eedc762fa97e1b640cc4715e3cdbc98eb768b86058626d78d1f14f4d8bd8e
+
 
 script: 
  - lein do clean, check
  - lein ancient
  - lein cloverage
  
-addons:
-  code_climate:
-    repo_token: 807eedc762fa97e1b640cc4715e3cdbc98eb768b86058626d78d1f14f4d8bd8e
+after_script:
+  - codeclimate-test-reporter < target/coverage.txt
+
 
 deploy:
   provider: script
