Feature/add codox (#66)
* add codeclimate

* remove remainining ns maps and fix eastwood issues

* add bikeshed, fix whitespace

* introduce bikeshed, fix issues

* add codox for docs

* tidy qa setup

* remove codeclimate

* setup release tasks to generate/commit docs

* don't sign tags

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,14 @@
 language: clojure
 
+lein: 2.6.1
+
 cache:
   directories:
     - $HOME/.m2
     
-addons:
-  code_climate:
-    repo_token: 807eedc762fa97e1b640cc4715e3cdbc98eb768b86058626d78d1f14f4d8bd8e
-
-
-script: 
- - lein do clean, eastwood, bikeshed -m 100, check
- - lein ancient
- - lein cloverage
- 
-after_script:
-  - codeclimate-test-reporter < target/coverage.txt
-
+script:
+ - lein clean
+ - lein qa
 
 deploy:
   provider: script
