template accepts map+str, qa alias

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,7 @@ cache:
     - $HOME/.m2
     
 script: 
- - lein do clean, eastwood, bikeshed -m 100, check
- - lein ancient
- - lein cloverage
+ - lein qa
  
 deploy:
   provider: script
