fix wrong command

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ cache:
     - $HOME/.m2
 
 script:
- - if [ "$TRAVIS_EVENT_TYPE" = "cron" ]; then third-party-check; else lein qa; fi
+ - if [ "$TRAVIS_EVENT_TYPE" = "cron" ]; then lein third-party-check; else lein qa; fi
 
 deploy:
   provider: script
